--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -1,6 +1,9 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
 
 en:
+  date:
+    formats:
+      short: '%d.%m.%y'
   devise:
     confirmations:
       confirmed: "Your email address has been successfully confirmed."
